<resources>
    <string name="app_name">Standalone App</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_title">Please Complete the following fields</string>
    <string name="firstName"> First Name</string>
    <string name="midName"> Middle Name </string>
    <string name="lastName"> Last Name </string>
    <string name="profile_desc">Press To Take Picture</string>
    <string name="submit_text">Submit</string>

    <string name="back_text"> Back </string>
</resources>