<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textSize = "23sp"
            android:id="@+id/title"
            />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight = "1"
        android:autofillHints=""
        android:hint="@string/firstName"
        android:inputType="text" />

    <EditText
        android:layout_width = "match_parent"
        android:layout_height = "50dp"
        android:layout_weight = "1"
        android:hint="@string/midName"
        android:id="@+id/mid_name"
        android:inputType="text"
        android:autofillHints=""
        />

    <EditText
        android:layout_width = "match_parent"
        android:layout_height="50dp"
        android:layout_weight = "1"
        android:hint="@string/lastName"
        android:id="@+id/last_name"
        android:inputType="text"
        android:autofillHints=""
        />

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:contentDescription="@string/profile_desc"
        android:scaleType="fitXY"
        tools:src="@tools:sample/avatars" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        android:id="@+id/submit_but"
        />

</LinearLayout>